<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>message_conversion_json</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <author email="achim.krauch@gmail.com">Hans-Joachim Krauch</author>
  <maintainer email="achim.krauch@gmail.com">Hans-Joachim Krauch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nlohmann-json-dev</depend>
  <depend>rclcpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
